# pyopenalex

./: .gitignore  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: MISSING.md
examples/: new_endpoints.py  pydantic-ai-tools.py  quickstart.py
pyopenalex/: __init__.py  _http.py  client.py  config.py  endpoints.py  exceptions.py  expressions.py  markdown.py  query.py
pyopenalex/models/: __init__.py  authors.py  autocomplete.py  awards.py  base.py  continents.py  countries.py  domains.py  fields.py  funders.py  institution_types.py  institutions.py  keywords.py  languages.py  licenses.py  publishers.py  sdgs.py  source_types.py  sources.py  special.py  subfields.py  topics.py  work_types.py  works.py
skills/pyopenalex/: SKILL.md
tests/: conftest.py  test_endpoints.py  test_expressions.py  test_http.py  test_models.py  test_query.py  test_special.py
tests/fixtures/: author.json  autocomplete.json  award.json  continent.json  country.json  domain.json  field.json  funder.json  institution.json  institution_type.json  keyword.json  language.json  license.json  publisher.json  sdg.json  source.json  source_type.json  subfield.json  topic.json  work.json  work_type.json  works_list.json
