[project]
name = "pyopenalex"
version = "0.1.1"
description = "A Pydantic-powered Python client for the OpenAlex API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Nicolai B. Thomsen", email = "nbth.msc@cbs.dk" },
]
keywords = ["openalex", "scholarly", "academic", "research", "pydantic", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tenacity>=8.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/nthomsencph/pyopenalex"
Repository = "https://github.com/nthomsencph/pyopenalex"
Issues = "https://github.com/nthomsencph/pyopenalex/issues"

[tool.hatch.build.targets.sdist]
exclude = ["tests/", ".claude/", ".python-version", "logo.png"]

[tool.hatch.build.targets.wheel]
packages = ["pyopenalex"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
